Pass Python executable instead of include path
so we can find out whether it's a 32-bit or 64-bit installation,
so we know whether to build the client request wrappers with -m32
or not.

--- a/configure.ac
+++ b/configure.ac
@@ -5300,28 +5300,29 @@ AC_CACHE_CHECK([whether to build the Derivgrind Python client request wrappers],
     [vg_cv_dg_python=$enableval],
     [vg_cv_dg_python=no])])
 AM_CONDITIONAL([ENABLE_PYTHON], [test x$vg_cv_dg_python != no])
-AC_SUBST(PYTHON_INCLUDES) # something like -I/usr/includes/python3.10
+AC_SUBST(PYTHON) # the Python executable
 if test x$vg_cv_dg_python != xno; then
-  if test x$vg_cv_dg_python == xyes; then # no Python includes supplied, try to find them with python3-config
-    AC_MSG_CHECKING([for include flags with python3-config])
-    if ! command -v python3-config &> /dev/null; then
+  if test x$vg_cv_dg_python == xyes; then # no Python executable supplied
+    AC_MSG_CHECKING([for python3])
+    if ! command -v python3 &> /dev/null; then
       AC_MSG_RESULT([not found])
-      AC_MSG_ERROR([Building Derivgrind Python wrappers was enabled but no include flags were provided, and python3-config was not found.])
+      AC_MSG_ERROR([python3 executable not found, specify path with --enable-python=path])
     else
-      PYTHON_INCLUDES=$(python3-config --includes)
-      AC_MSG_RESULT([found (${PYTHON_INCLUDES})])
+      PYTHON=python3
+      AC_MSG_RESULT([found])
     fi
   else
-    PYTHON_INCLUDES="-I${vg_cv_dg_python}"
+    PYTHON=${vg_cv_dg_python}
   fi
   AC_MSG_CHECKING([Python.h])
   temp_dir=$( /usr/bin/mktemp -d )
   echo "#include <Python.h>" >${temp_dir}/mylib.c
-  ${CC} ${CFLAGS} -c -o ${temp_dir}/mylib.o ${temp_dir}/mylib.c ${PYTHON_INCLUDES} 2>${temp_dir}/error
+  PYTHON_INCLUDES=$(${PYTHON} -c "import sysconfig; print(sysconfig.get_path('include'))")
+  ${CC} ${CFLAGS} -c -o ${temp_dir}/mylib.o ${temp_dir}/mylib.c -I${PYTHON_INCLUDES} 2>${temp_dir}/error
   if test "$(cat ${temp_dir}/error)" != "" ; then
     AC_MSG_RESULT([bad])
     rm -rf ${temp_dir}
-    AC_MSG_ERROR([No or bad Python.h found using the include flags (${PYTHON_INCLUDES}).])
+    AC_MSG_ERROR([No or bad Python.h found in ${PYTHON_INCLUDES}. Have you installed the Python headers?])
   else
     AC_MSG_RESULT([ok])
     rm -rf ${temp_dir}
