--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,9 +7,9 @@ build:
   stage: build
   script:
     - apt-get update
-    - apt-get install -y build-essential binutils automake gcc-multilib python3 gfortran
+    - apt-get install -y build-essential binutils gfortran automake gcc-multilib g++-multilib python3 python3-dev
     - ./autogen.sh
-    - CFLAGS=-g ./configure --prefix=$PWD/install
+    - CFLAGS=-g ./configure --prefix=$PWD/install --enable-fortran --enable-python
     - make install
   artifacts:
     paths:
@@ -20,11 +20,10 @@ test_dot_x86:
   script:
     - export DEBIAN_FRONTEND=noninteractive
     - apt-get update
-    - apt-get install -y build-essential gfortran gdb gcc-multilib g++-multilib gfortran-multilib libc6-dbg git clang libomp-dev
-    - dpkg --add-architecture i386
-    - apt-get update
-    - apt-get install -y python3:i386 python3-numpy:i386 python3-dev:i386
-    - cd derivgrind/diff_tests && ./setup.sh && cd - 
+    - apt-get install -y build-essential gfortran gdb gcc-multilib g++-multilib gfortran-multilib libc6-dbg clang libomp-dev python3 python3-numpy
+#    - dpkg --add-architecture i386
+#    - apt-get update
+#    - apt-get install -y python3:i386 python3-numpy:i386 python3-dev:i386
     - cd derivgrind/diff_tests && python3 run_tests.py dot_x86*
 
 test_bar_x86:
@@ -32,11 +31,10 @@ test_bar_x86:
   script:
     - export DEBIAN_FRONTEND=noninteractive
     - apt-get update
-    - apt-get install -y build-essential gfortran gdb gcc-multilib g++-multilib gfortran-multilib libc6-dbg git clang libomp-dev
-    - dpkg --add-architecture i386
-    - apt-get update
-    - apt-get install -y python3:i386 python3-numpy:i386 python3-dev:i386
-    - cd derivgrind/diff_tests && ./setup.sh && cd - 
+    - apt-get install -y build-essential gfortran gdb gcc-multilib g++-multilib gfortran-multilib libc6-dbg clang libomp-dev python3 python3-numpy
+#    - dpkg --add-architecture i386
+#    - apt-get update
+#    - apt-get install -y python3:i386 python3-numpy:i386 python3-dev:i386
     - cd derivgrind/diff_tests && python3 run_tests.py bar_x86*
 
 .test_dot_amd64:
