--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ build:
     paths:
       - install/
 
-test_dot_x86:
+.test_dot_x86:
   stage: test
   script:
     - export DEBIAN_FRONTEND=noninteractive
@@ -26,7 +26,7 @@ test_dot_x86:
 #    - apt-get install -y python3:i386 python3-numpy:i386 python3-dev:i386
     - cd derivgrind/diff_tests && python3 run_tests.py dot_x86*
 
-test_bar_x86:
+.test_bar_x86:
   stage: test
   script:
     - export DEBIAN_FRONTEND=noninteractive
@@ -36,6 +36,21 @@ test_bar_x86:
 #    - apt-get update
 #    - apt-get install -y python3:i386 python3-numpy:i386 python3-dev:i386
     - cd derivgrind/diff_tests && python3 run_tests.py bar_x86*
+
+test_perf_x86:
+  stage: test
+  script:
+    - export DEBIAN_FRONTEND=noninteractive
+    - apt-get update
+    - apt-get install -y build-essential gcc-multilib g++-multilib clang python3 python3-numpy python3-pip
+    - pip install anybadge
+    - mkdir -p badges
+    - anybadge -l 'Performance for GCC O3 x86' -v $(cd derivgrind/diff_tests && python3 run_tests.py perf_dot_x86_g++_o3_burgers | awk '$1 ~ /OK./ { print $2 }') -f badges/gcc_o3_x86.svg
+  artifacts:
+    paths:
+      - badges/
+
+
 
 .test_dot_amd64:
   stage: test
