--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,7 +45,7 @@ test_perf_x86:
     - apt-get install -y build-essential gcc-multilib g++-multilib clang python3 python3-numpy python3-pip
     - pip install anybadge
     - mkdir -p badges
-    - anybadge -l 'Performance for GCC O3 x86' -v $(cd derivgrind/diff_tests && python3 run_tests.py perf_dot_x86_g++_o3_burgers | awk '$1 ~ /OK./ { print $2 }') -f badges/gcc_o3_x86.svg
+    - anybadge -l 'Performance for GCC O3 x86' -v $(cd derivgrind/diff_tests && python3 run_tests.py --codidir=$PWD/../externals/CoDiPack/include perf_dot_x86_g++_o3_burgers | awk '$1 ~ /OK./ { print $2 }') -f badges/gcc_o3_x86.svg
   artifacts:
     paths:
       - badges/
