--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: debian:11.3
+image: debian:11.5
 
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
@@ -58,7 +58,8 @@ test_torch_x86:
   script: 
     - export DEBIAN_FRONTEND=noninteractive
     - apt-get update
-    - apt-get install -y build-essential gcc-multilib g++-multilib python3 python3-numpy python3-torch
+    - apt-get install -y build-essential gcc-multilib g++-multilib python3 python3-pip
+    - pip install torch numpy
     - |
       cat > mylib.c <<EOF
       void myfun(int param_size, char* param_buf, int input_count, double* input_buf, int output_count, double* output_buf){
@@ -85,8 +86,8 @@ test_tensorflow_x86:
   script:
     - export DEBIAN_FRONTEND=noninteractive
     - apt-get update
-    - apt-get install -y build-essential gcc-multilib g++-multilib python3 python3-numpy python3-pip
-    - pip install tensorflow
+    - apt-get install -y build-essential gcc-multilib g++-multilib python3 python3-pip
+    - pip install tensorflow numpy
     - |
       cat > mylib.c <<EOF
       void myfun(int param_size, char* param_buf, int input_count, double* input_buf, int output_count, double* output_buf){
