--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "derivgrind/externals/CoDiPack"]
 	path = derivgrind/externals/CoDiPack
 	url = https://github.com/SciCompKL/CoDiPack.git
+[submodule "derivgrind/externals/flexible-shadow"]
+	path = derivgrind/externals/flexible-shadow
+	url = https://github.com/maxaehle/flexible-shadow.git
