--- a/derivgrind/Makefile.am
+++ b/derivgrind/Makefile.am
@@ -24,7 +24,7 @@ DERIVGRIND_SOURCES_COMMON = dg_main.c dg_shadow.c dg_utils.c dg_expressionhandli
 derivgrind_@VGCONF_ARCH_PRI@_@VGCONF_OS@_SOURCES      = \
 	$(DERIVGRIND_SOURCES_COMMON)
 derivgrind_@VGCONF_ARCH_PRI@_@VGCONF_OS@_CPPFLAGS     = \
-	$(AM_CPPFLAGS_@VGCONF_PLATFORM_PRI_CAPS@) -nostdlib -fno-exceptions -fno-rtti -fno-use-cxa-atexit $(LTO_CFLAGS) $(AM_CFLAGS_@VGCONF_PLATFORM_PRI_CAPS@)
+	$(AM_CPPFLAGS_@VGCONF_PLATFORM_PRI_CAPS@) -nostdlib -fno-exceptions -fno-rtti -fno-use-cxa-atexit $(LTO_CFLAGS) $(AM_CFLAGS_@VGCONF_PLATFORM_PRI_CAPS@) $(SHADOW_LAYERS_32_CPPFLAGS) $(SHADOW_LAYERS_64_CPPFLAGS)
 derivgrind_@VGCONF_ARCH_PRI@_@VGCONF_OS@_CFLAGS       = $(LTO_CFLAGS) \
 	$(AM_CFLAGS_@VGCONF_PLATFORM_PRI_CAPS@)
 derivgrind_@VGCONF_ARCH_PRI@_@VGCONF_OS@_DEPENDENCIES = \
@@ -44,7 +44,7 @@ if VGCONF_HAVE_PLATFORM_SEC
 derivgrind_@VGCONF_ARCH_SEC@_@VGCONF_OS@_SOURCES      = \
 	$(DERIVGRIND_SOURCES_COMMON)
 derivgrind_@VGCONF_ARCH_SEC@_@VGCONF_OS@_CPPFLAGS     = \
-	$(AM_CPPFLAGS_@VGCONF_PLATFORM_SEC_CAPS@) -nostdlib -fno-exceptions -fno-rtti -fno-use-cxa-atexit  $(LTO_CFLAGS) $(AM_CFLAGS_@VGCONF_PLATFORM_SEC_CAPS@)
+	$(AM_CPPFLAGS_@VGCONF_PLATFORM_SEC_CAPS@) -nostdlib -fno-exceptions -fno-rtti -fno-use-cxa-atexit  $(LTO_CFLAGS) $(AM_CFLAGS_@VGCONF_PLATFORM_SEC_CAPS@) $(SHADOW_LAYERS_32_CPPFLAGS) $(SHADOW_LAYERS_64_CPPFLAGS)
 derivgrind_@VGCONF_ARCH_SEC@_@VGCONF_OS@_CFLAGS       = $(LTO_CFLAGS) \
 	$(AM_CFLAGS_@VGCONF_PLATFORM_SEC_CAPS@)
 derivgrind_@VGCONF_ARCH_SEC@_@VGCONF_OS@_DEPENDENCIES = \
