Enable amd64 tests in GitLab CI, using lightweight configuration.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,15 +15,24 @@ build:
     paths:
       - install/
 
+build_lightweight:
+  stage: build
+  script:
+    - apt-get update
+    - apt-get install -y build-essential binutils gfortran automake gcc-multilib g++-multilib python3 python3-dev
+    - ./autogen.sh
+    - CFLAGS=-g ./configure --prefix=$PWD/install_lightweight --enable-fortran --enable-python SHADOW_LAYERS_64=16,16,16,16
+    - make install
+  artifacts:
+    paths:
+      - install_lightweight/
+
 test_dot_x86:
   stage: test
   script:
     - export DEBIAN_FRONTEND=noninteractive
     - apt-get update
     - apt-get install -y build-essential gfortran gdb gcc-multilib g++-multilib gfortran-multilib libc6-dbg clang libomp-dev python3 python3-numpy
-#    - dpkg --add-architecture i386
-#    - apt-get update
-#    - apt-get install -y python3:i386 python3-numpy:i386 python3-dev:i386
     - cd derivgrind/diff_tests && python3 run_tests.py dot_x86*
 
 test_bar_x86:
@@ -32,10 +41,23 @@ test_bar_x86:
     - export DEBIAN_FRONTEND=noninteractive
     - apt-get update
     - apt-get install -y build-essential gfortran gdb gcc-multilib g++-multilib gfortran-multilib libc6-dbg clang libomp-dev python3 python3-numpy
-#    - dpkg --add-architecture i386
-#    - apt-get update
-#    - apt-get install -y python3:i386 python3-numpy:i386 python3-dev:i386
     - cd derivgrind/diff_tests && python3 run_tests.py bar_x86*
+
+test_dot_amd64:
+  stage: test
+  script:
+    - export DEBIAN_FRONTEND=noninteractive
+    - apt-get update
+    - apt-get install -y build-essential gfortran gdb gcc-multilib g++-multilib gfortran-multilib libc6-dbg clang libomp-dev python3 python3-numpy
+    - cd derivgrind/diff_tests && python3 run_tests.py dot_amd64* --prefix=$PWD/../../install_lightweight
+
+test_bar_amd64:
+  stage: test
+  script:
+    - export DEBIAN_FRONTEND=noninteractive
+    - apt-get update
+    - apt-get install -y build-essential gfortran gdb gcc-multilib g++-multilib gfortran-multilib libc6-dbg clang libomp-dev python3 python3-numpy
+    - cd derivgrind/diff_tests && python3 run_tests.py bar_amd64* --prefix=$PWD/../../install_lightweight
 
 test_perf_x86:
   stage: test
