--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,7 +64,7 @@ test_perf_x86:
   script:
     - export DEBIAN_FRONTEND=noninteractive
     - apt-get update
-    - apt-get install -y build-essential gcc-multilib g++-multilib clang python3 python3-numpy python3-pip
+    - apt-get install -y build-essential gcc-multilib g++-multilib clang python3 python3-numpy python3-pip time
     - pip install anybadge
     - mkdir -p badges
     - anybadge -l 'Forward-mode run-time' -v 'Error' -f badges/dot_gcc_o3_x86.svg -c 'red'
