Note on modification in valgrind.h.in

--- a/include/valgrind.h.in
+++ b/include/valgrind.h.in
@@ -1,3 +1,9 @@
+/* NOTE: This is not the original valgrind.h shipped with the
+ * the Valgrind dynamic binary instrumentation framework. We have
+ * modified it to provide functions wrappers for math.h functions
+ * in Derivgrind.
+ */
+
 /* -*- c -*-
    ----------------------------------------------------------------
 
