--- a/derivgrind/Makefile.am
+++ b/derivgrind/Makefile.am
@@ -177,6 +177,16 @@ CLEANFILES += wrappers/python3/derivgrind.so
 endif
 
 #----------------------------------------------------------------------------
+# Python wrapper for tape handling.
+#----------------------------------------------------------------------------
+if ENABLE_PYTHON
+libpython_DATA += bar/derivgrind_tape.so
+bar/derivgrind_tape.so: bar/derivgrind_tape.cpp
+	$(CXX) -fvisibility=hidden -shared -fPIC -std=c++17 -Iexternals/pybind11/include -Iexternals/eigen -I$$(@PYTHON@  -c "import sysconfig; print(sysconfig.get_path('include'))") bar/derivgrind_tape.cpp -o bar/derivgrind_tape.so -I. -I../include $$(@PYTHON@ -c "import sys; print('' if sys.maxsize>2**32 else '-m32')")
+CLEANFILES += bar/derivgrind_tape.so
+endif
+
+#----------------------------------------------------------------------------
 # PyTorch external function wrapper.
 #----------------------------------------------------------------------------
 libpython_SCRIPTS = wrappers/torch/derivgrind_torch.py
