Move tape handling files from bar/ to eval/
and put them under the MIT license.

--- a/derivgrind/Makefile.am
+++ b/derivgrind/Makefile.am
@@ -180,10 +180,10 @@ endif
 # Python wrapper for tape handling.
 #----------------------------------------------------------------------------
 if ENABLE_PYTHON
-libpython_DATA += bar/derivgrind_tape.so
-bar/derivgrind_tape.so: bar/derivgrind_tape.cpp
-	$(CXX) -fvisibility=hidden -shared -fPIC -std=c++17 -Iexternals/pybind11/include -Iexternals/eigen -I$$(@PYTHON@  -c "import sysconfig; print(sysconfig.get_path('include'))") bar/derivgrind_tape.cpp -o bar/derivgrind_tape.so -I. -I../include $$(@PYTHON@ -c "import sys; print('' if sys.maxsize>2**32 else '-m32')")
-CLEANFILES += bar/derivgrind_tape.so
+libpython_DATA += eval/derivgrind_tape.so
+eval/derivgrind_tape.so: eval/derivgrind_tape_python.cpp
+	$(CXX) -fvisibility=hidden -shared -fPIC -std=c++17 -Iexternals/pybind11/include -Iexternals/eigen -I$$(@PYTHON@  -c "import sysconfig; print(sysconfig.get_path('include'))") eval/derivgrind_tape_python.cpp -o eval/derivgrind_tape.so -I. -I../include $$(@PYTHON@ -c "import sys; print('' if sys.maxsize>2**32 else '-m32')")
+CLEANFILES += eval/derivgrind_tape.so
 endif
 
 #----------------------------------------------------------------------------
