Also export tape-evaluation and derivgrind-config in the snap
They must be invoked as derivgrind.tape-evaluation and
derivgrind.derivgrind-config.

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -48,4 +48,8 @@ parts:
 apps:
   derivgrind:
     command: usr/local/bin/derivgrind
+  tape-evaluation:
+    command: usr/local/bin/tape-evaluation
+  derivgrind-config:
+    command: usr/local/bin/derivgrind-config
 
