--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -13,7 +13,7 @@ issues:
 license: GPL-2.0-only
 source-code: https://github.com/SciCompKL/derivgrind
 title: Derivgrind
-confinement: devmode
+confinement: classic
 
 base: core22
 
