--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ build:
     - apt-get update
     - apt-get install -y build-essential binutils gfortran automake gcc-multilib g++-multilib python3 python3-dev
     - ./autogen.sh
-    - CFLAGS=-g ./configure --prefix=$PWD/install --enable-fortran --enable-python
+    - CFLAGS=-g ./configure --prefix=$PWD/install --enable-fortran --enable-python --enable-mlframeworks
     - make install
   artifacts:
     paths:
@@ -21,7 +21,7 @@ build_lightweight:
     - apt-get update
     - apt-get install -y build-essential binutils gfortran automake gcc-multilib g++-multilib python3 python3-dev
     - ./autogen.sh
-    - CFLAGS=-g ./configure --prefix=$PWD/install_lightweight --enable-fortran --enable-python SHADOW_LAYERS_64=16,16,16,16
+    - CFLAGS=-g ./configure --prefix=$PWD/install_lightweight --enable-fortran --enable-python --enable-mlframeworks SHADOW_LAYERS_64=16,16,16,16
     - make install
   artifacts:
     paths:
